feat: FORMS-937 allow basicauth for template rendering (#1190)
* feat: FORMS-937 allow basicauth for template rendering

* feat: FORMS-937 expanded docs to include cdogs template
