# app/src/docs/v1.api-spec.yaml
@@ -1396,11 +1396,26 @@ paths:
                 $ref: '#/components/schemas/Error'
   /submissions/{formSubmissionId}/template/render:
     post:
-      summary: Generate document from inline Template
+      summary: Generate a document from a document template
       description: >-
-        This endpoint accepts a document template and a set (or multiple sets)
-        of substitution variables and merges them into the document.
+        Merges data from a form submission into a document template.
+
+        #### Common Document Generation Service (CDOGS)
+
+        This endpoint is a passthrough to CDOGS. Instead of using *BasicAuth* to
+        call this endpoint, it is highly recommended that you [directly call
+        CDOGS](https://bcgov.github.io/common-service-showcase/services/cdogs.html).
+        Benefits of calling CDOGS directly from your application:
+          - avoid CHEFS API rate limiting restrictions
+          - avoid CHEFS API timeout restrictions (for large documents)
+          - better performance (direct call instead of passthrough)
+          - ability to use the CDOGS template cache
+          - direct support from the CDOGS team for your specific Client ID
       operationId: uploadTemplateAndRenderReport
+      security:
+        - BasicAuth: []
+        - BearerAuth: []
+          OpenID: []
       tags:
         - Template
       parameters:
@@ -1414,7 +1429,7 @@ paths:
               $ref: '#/components/schemas/TemplateRenderObject'
       responses:
         '200':
-          description: Returns the supplied document with variables merged in
+          description: Returns the document template with merged variables
           content:
             application/octet-stream:
               schema:
@@ -1434,12 +1449,18 @@ paths:
                 type: string
               description: The MIME-type of the binary file payload
               example: application/pdf
+            RateLimit:
+              $ref: '#/components/headers/RateLimit'
+            RateLimit-Policy:
+              $ref: '#/components/headers/RateLimit-Policy'
         '400':
           $ref: '#/components/responses/BadRequest'
         '403':
           $ref: '#/components/responses/Forbidden'
         '422':
           $ref: '#/components/responses/UnprocessableEntity'
+        '429':
+          $ref: '#/components/responses/TooManyRequests'
         default:
           description: Unexpected error
           content:
@@ -3081,7 +3102,7 @@ components:
             showSubmissionConfirmation:
               type: boolean
               example: true
-            sendSubmissionReceivedEmail: 
+            sendSubmissionReceivedEmail:
               type: boolean
               example: true
               description: Used to indicate if team should be notified upon submission
@@ -3837,17 +3858,37 @@ components:
             convertTo:
               type: string
               description: >-
-                The desired file extension of the generated document, used for
-                converting to other types of document. If not supplied, will
-                just use the original contentFileType.
+                The desired file type of the generated document. If not
+                supplied, will use the original contentFileType.
               example: pdf
             reportName:
               type: string
               description: >-
-                The desired file name of the generated document, can accept
-                template substitution fields from the contexts. If not supplied,
-                will use a random UUID.  Extension will be from convertTo.
-              example: abc_123_{d.firstName}_{d.lastName}
+                The desired file name of the generated document. Can perform
+                template substitution using the form data. If not supplied, will
+                use a random UUID.
+              example: abc_123_{d.firstName}_{d.lastName}.pdf
+        template:
+          type: object
+          description: Object containing the document template
+          properties:
+            content:
+              type: string
+              description: >-
+                The document template encoded as a `base64` string. The example
+                is the encoded value of the text file
+                `Hello {d.firstName} {d.lastName}!`.
+              example: 'SGVsbG8ge2QuZmlyc3ROYW1lfSB7ZC5sYXN0TmFtZX0hCg=='
+            encodingType:
+              type: string
+              description: >-
+                The encoding of the `content` property: use `base64`.
+              example: base64
+            fileType:
+              type: string
+              description: >-
+                The original file type of the `content` document template.
+              example: txt
     TimeStampUserData:
       type: object
       properties:
